Add asn1 plugin

--- a/build.config
+++ b/build.config
@@ -33,6 +33,7 @@ plugins/relx
 plugins/shell
 plugins/triq
 plugins/xref
+plugins/asn1
 
 # Plugins enhancing the functionality of other plugins.
 plugins/cover
